@@ -1,3 +1,8 @@
+2006-01-25  Bryce McKinlay  <mckinlay@redhat.com>
+
+	* include/private/gcconfig.h: Revert to GC 6.6 version, removing
+	all local changes.
+
 2006-01-24  Bryce McKinlay  <mckinlay@redhat.com>
 
 	Import Boehm GC version 6.6.
